[gd_scene load_steps=25 format=3 uid="uid://dpoaq8l82upi4"]

[ext_resource type="Texture2D" uid="uid://cbj3f2h867ybo" path="res://mystic_woods_free_2.1/sprites/characters/slime.png" id="1_fgbbf"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_huymh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gak3h"]
atlas = ExtResource("1_fgbbf")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m56m2"]
atlas = ExtResource("1_fgbbf")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klneh"]
atlas = ExtResource("1_fgbbf")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rae6u"]
atlas = ExtResource("1_fgbbf")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci5gb"]
atlas = ExtResource("1_fgbbf")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjf81"]
atlas = ExtResource("1_fgbbf")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1gqt"]
atlas = ExtResource("1_fgbbf")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n786"]
atlas = ExtResource("1_fgbbf")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1sbv"]
atlas = ExtResource("1_fgbbf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wj52"]
atlas = ExtResource("1_fgbbf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8qvw"]
atlas = ExtResource("1_fgbbf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jme6n"]
atlas = ExtResource("1_fgbbf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lujhr"]
atlas = ExtResource("1_fgbbf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_en6yj"]
atlas = ExtResource("1_fgbbf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vhtb"]
atlas = ExtResource("1_fgbbf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q72xg"]
atlas = ExtResource("1_fgbbf")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfj6"]
atlas = ExtResource("1_fgbbf")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0pbd"]
atlas = ExtResource("1_fgbbf")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_guef1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gak3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m56m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klneh")
}],
"loop": true,
"name": &"damage",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rae6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci5gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjf81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1gqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n786")
}],
"loop": true,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1sbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wj52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8qvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jme6n")
}],
"loop": true,
"name": &"side",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lujhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en6yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vhtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q72xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0pbd")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rxfoy"]
radius = 64.0312

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jb0d7"]
radius = 6.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cqcie"]
radius = 11.0

[node name="slime" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_huymh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_guef1")
animation = &"side"

[node name="detection" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_rxfoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jb0d7")

[node name="slime_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_cqcie")
metadata/_edit_lock_ = true

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.329412, 0.796078, 0.0941176, 1)
offset_left = -7.0
offset_top = 8.0
offset_right = 133.0
offset_bottom = 35.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="damage_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="slime_hitbox" to="." method="_on_slime_hitbox_body_entered"]
[connection signal="body_exited" from="slime_hitbox" to="." method="_on_slime_hitbox_body_exited"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
